--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -110,6 +110,8 @@
 .masthead h2 {
   max-width: 20rem;
   font-size: 1rem;
+  -webkit-animation: bounceIn 2s;
+  animation: bounceIn 2s;
 }
 
 @media (min-width: 768px) {
@@ -294,4 +296,32 @@ a:focus, a:hover {
 
 footer {
   padding: 5rem 0;
+}
+
+@-webkit-keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
 }
