--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -37,3 +37,17 @@ a {
 footer {
   padding: 5rem 0;
 }
+
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
