--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -12,8 +12,8 @@
 #mainNav .navbar-toggler {
   font-size: 80%;
   padding: 0.75rem;
-  color: #64a19d;
-  border: 1px solid #64a19d;
+  color: #10e3a7;
+  border: 1px solid #10e3a7;
 }
 
 #mainNav .navbar-toggler:focus {
@@ -72,15 +72,15 @@
     border-bottom: 0.25rem solid transparent;
   }
   #mainNav.navbar-shrink .nav-link:hover {
-    color: #64a19d;
+    color: #10e3a7;
   }
   #mainNav.navbar-shrink .nav-link:active {
-    color: #467370;
+    color: #0b9c72;
   }
   #mainNav.navbar-shrink .nav-link.active {
-    color: #64a19d;
+    color: #10e3a7;
     outline: none;
-    border-bottom: 0.25rem solid #64a19d;
+    border-bottom: 0.25rem solid #10e3a7;
   }
 }
 
@@ -95,6 +95,19 @@
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+}
+
+.masthead .gradient-button {
+  color: #fff;
+  background-color: #10e3a7;
+  border-color: #007bff;
+  transition: all 300ms ease-in-out;
+}
+
+.masthead .gradient-button:hover {
+  background-image: linear-gradient(to right, #10e3a7 0%, #10e3d8 80%, #10e3d8 100%);
+  transition: all 300ms ease-in-out;
+  letter-spacing: 12px;
 }
 
 .masthead h1 {
@@ -148,20 +161,20 @@
 }
 
 .btn-primary {
-  background-color: #64a19d;
+  background-color: #10e3a7;
 }
 
 .btn-primary:hover {
-  background-color: #4f837f;
+  background-color: #0db384;
 }
 
 .btn-primary:focus {
-  background-color: #4f837f;
+  background-color: #0db384;
   color: white;
 }
 
 .btn-primary:active {
-  background-color: #467370 !important;
+  background-color: #0b9c72 !important;
 }
 
 .about-section {
@@ -184,8 +197,12 @@
 @media (min-width: 992px) {
   .projects-section .featured-text {
     padding: 0 0 0 2rem;
-    border-left: 0.5rem solid #64a19d;
+    border-left: 0.5rem;
   }
+}
+
+.projects-section .padded-offset-link {
+  padding-top: 1rem;
 }
 
 .projects-section .project-text {
@@ -198,10 +215,22 @@
     padding: 5rem;
   }
   .projects-section .project-text hr {
-    border-color: #64a19d;
+    border-color: #10e3a7;
     border-width: .25rem;
     width: 30%;
   }
+}
+
+.projects-section .text-sub-link {
+  color: #10e3a7 !important;
+  transition: all 300ms ease-in-out;
+}
+
+.projects-section .text-sub-link:hover {
+  color: #10e3d8 !important;
+  transition: all 300ms ease-in-out;
+  letter-spacing: 2px;
+  font-weight: bold;
 }
 
 .signup-section {
@@ -230,7 +259,7 @@
 
 .contact-section .card {
   border: 0;
-  border-bottom: 0.25rem solid #64a19d;
+  border-bottom: 0.25rem solid #10e3a7;
 }
 
 .contact-section .card h4 {
@@ -241,7 +270,7 @@
 }
 
 .contact-section .card hr {
-  border-color: #64a19d;
+  border-color: #10e3a7;
   border-width: 0.25rem;
   width: 3rem;
 }
@@ -274,12 +303,12 @@ body {
 }
 
 a {
-  color: #64a19d;
+  color: #10e3a7;
 }
 
 a:focus, a:hover {
   text-decoration: none;
-  color: #3c6360;
+  color: #098461;
 }
 
 .bg-black {
@@ -287,11 +316,11 @@ a:focus, a:hover {
 }
 
 .bg-primary {
-  background-color: #64a19d !important;
+  background-color: #10e3a7 !important;
 }
 
 .text-primary {
-  color: #64a19d !important;
+  color: #10e3a7 !important;
 }
 
 footer {
