--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,4 +12,7 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #161616 !default;
 
-$primary: #64a19d !default;
+$oldprimary: #64a19d !default;
+$newprimary: #09e3b4 !default;
+$primary: #10e3a7 !default;
+$secondary: #10e3d8 !default;
