--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -4,8 +4,12 @@
     padding: 2rem;
     @media (min-width: 992px) {
       padding: 0 0 0 2rem;
-      border-left: 0.5rem solid $primary;
+      border-left: 0.5rem;
+      // border-left: 0.5rem solid $primary;
     }
+  }
+  .padded-offset-link{
+    padding-top: 1rem;
   }
   .project-text {
     padding: 3rem;
@@ -18,5 +22,16 @@
         width: 30%;
       }
     }
+  }
+  .text-sub-link {
+    color: $primary !important;
+    transition: all 300ms ease-in-out;
+  }
+  .text-sub-link:hover{
+    color: $secondary !important;
+    transition: all 300ms ease-in-out;
+    letter-spacing: 2px;
+    // text-decoration: underline;
+    font-weight: bold;
   }
 }
