--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -27,6 +27,10 @@
         outline: none;
         background-color: transparent;
       }
+      .align-box {
+       display: flex;
+       align-items:center;
+      }
     }
   }
   @media (min-width: 992px) {
