--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -302,6 +302,48 @@
   color: #fff;
 }
 
+/* layout */
+.base-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
+
+/* Helper Function */
+/* Parallax Styles */
+.parallax-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  perspective: 8px;
+  perspective-origin: 0%;
+}
+
+.image, .background__image, .middle__image, .foreground__image {
+  position: absolute;
+  transform-origin: 0 50%;
+  width: 420px;
+  height: 420px;
+}
+
+.background__image {
+  transform: translateZ(0px) scale(1);
+  height: 840px;
+}
+
+.middle__image {
+  top: 150px;
+  transform: translateZ(5px) scale(0.375);
+}
+
+.foreground__image {
+  top: 125px;
+  transform: translateZ(2px) scale(0.75);
+}
+
 body {
   font-family: 'Nunito';
   letter-spacing: 0.0625em;
